--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
 		<p><font size=2>推奨端末: iPhone(6以降)</font></p>
 		<p><font size=2>Androidは画面広い機種だったらいけるかな</font></p>
 		<p><font size=2>6以前、SEは画面が小さいので正常に画面表示されないかも</font></p>
-		<p><b>・ご要望(6/26更新)</b></p>
-		<p><font size=3><b>「サイド当てゲームしたい！サイドが見たい！？」</b></font></p>
-		<p><font size=2>-javascript初心者に要望投げるのは酷(できました)</font></p>
-		<p><font size=3><b>「カードを下に並べても何のカードを重ねたのかわかりません」</b></font></p>
-		<p><font size=2>-うるせえ！！上向きに並ぶようにしたらいいんだろぉ！？(しました)</font></p>
+		<p><b>・ご要望(6/28更新)</b></p>
+		<p><font size=3><b>「グラジオ使えないじゃん」</b></font></p>
+		<p><font size=2>-使えるようにしました</font></p>
 		<p><b>・いろいろ</b></p>
 		<p><font size=2>カードをまとめて移動できないのは仕様です、対策を検討中...</font></p>
 		<p><font size=2>1人で作ったのでデバッグ作業が間に合ってません、不具合があったら報告お願いします。</font></p>
