--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=375, user-scalable=no"/>
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/555109074564284428/594036414354817024/image0.png">
     <title>ポケカ1人回しツール</title>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js'></script>
     <script src="js/deck.js"></script>
     <script src="js/deckBuild.js"></script>
     <script src="js/cardMove.js"></script>
@@ -50,7 +51,7 @@
 				<div id="free2"   class="fieldBox"></div>
 				<div id="side"    class="sideBox"><p>side</p><p id=numOfSide>-</p></div>
 			</div>	
-			<br><br>
+			<br><br><br>
 			<div id=bench>
 				<div id="bench1" class="fieldBox"></div>
 				<div id="bench2" class="fieldBox"></div>
