--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div id="hand" class="ui-widget-content"></div>
 	
 		<div id="deckMenu" class="ui-widget-content">
-			<div id="drawButton"><a>ドロー</a></div>
+			<div id="drawButton"><a>ドロー</a><p id=numOfDeck>-</p></div>
 			<div id="drawedCard"></div>
 			<!-- <div id="sendToTrash">トラッシュする</div> -->
 			<div id="returnToDeckBottom">デッキの下に戻す</div>
@@ -110,7 +110,7 @@
 					<div id="resetButton" class="settingButton"><a>リセット/新規対戦</a></div>
 				</div>
 				<div style="display: flex;">
-					<div class="settingButton"><a>(準備中)</a></div>
+					<div id="countHandButton" class="settingButton"><a>手札の枚数</a></div>
 					<div id="drawBottomButton" class="settingButton"><a>デッキ下からドロー</a></div>
 				</div>
 			</div>
