--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 	<!--------------------- ホーム --------------------->	
 	<div id="home">
 		<p><font size=2>推奨端末: iPhone(6以降)</font></p>
-		<p><font size=2>Androidは画面広い機種だったらいけるかな</font></p>
+		<p><font size=2>Androidは画面広い機種だったらいけるはず</font></p>
 		<p><font size=2>6以前、SEは画面が小さいので正常に画面表示されないかも</font></p>
-		<p><b>・ご要望(6/28更新)</b></p>
-		<p><font size=3><b>「グラジオ使えないじゃん」</b></font></p>
-		<p><font size=2>-使えるようにしました</font></p>
+		<p><b>・ご要望(8/3更新)</b></p>
+		<p><font size=3><b>ソルルナSR当てて気分がいいので新機能</b></font></p>
+		<p><font size=2>トラッシュに送るボックスの追加、いちいち引き出さなくてもいいよ</font></p>
 		<p><b>・いろいろ</b></p>
 		<p><font size=2>カードをまとめて移動できないのは仕様です、対策を検討中...</font></p>
 		<p><font size=2>1人で作ったのでデバッグ作業が間に合ってません、不具合があったら報告お願いします。</font></p>
@@ -66,9 +66,9 @@
 		<div id="deckMenu" class="ui-widget-content">
 			<div id="drawButton"><a>ドロー</a><p id=numOfDeck>-</p></div>
 			<div id="drawedCard"></div>
-			<!-- <div id="sendToTrash">トラッシュする</div> -->
-			<div id="returnToDeckBottom">デッキの下に戻す</div>
-			<div id="returnToDeckTop">デッキの上に戻す</div>
+			<div id="sendToTrash">トラッシュ</div>
+			<div id="returnToDeckBottom">山の下に戻す</div>
+			<div id="returnToDeckTop">山の上に戻す</div>
 		</div>
 	
 		<ul id="menu">
