--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 	
 	<!----------------------- デッキ作成フォーム ----------------------->
 	<div id="deckBuild">
+		<!--
 		<div id="deckList">
 			<li class="cardUrl">
     			<b>画像URL:</b>
@@ -127,6 +128,13 @@
     			<b>枚数:</b>
 				<input type="text" class="cardNums" size="2">
 			</li>
+		</div>
+		-->
+		
+		<div id="deckList">
+			<select name="decks">
+				<option value="3">(シティ秋葉原優勝)モルペコ人形</option>
+			</select>	
 		</div>
 	
 		<div>
