--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js'></script>
+    <script src="js/cardSet.js"></script>
     <script src="js/deck.js"></script>
     <script src="js/deckBuild.js"></script>
     <script src="js/cardMove.js"></script>
@@ -134,13 +135,20 @@
 		<div id="deckList">
 			<select name="decks">
 				<option value="3">(シティ秋葉原優勝)モルペコ人形</option>
-			</select>	
+			</select>
 		</div>
-	
+		
+		<!--
 		<div>
 			<input type="submit" id="addCardButton" value="+カードの追加">
 			<input type="submit" id="buildDeckButton" value="デッキデータ生成">
 		</div>
+		-->
+		
+		<div>
+			<input type="submit" id="selectButton" value="決定">
+		</div>
+		
 		<br>
 		<b>•デッキデータ</b>
 		<form>
