--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		</div>
 		
 		<br>
-		<b>•デッキデータ</b>
+		<b>•ひみつのじゅもん</b>
 		<form>
 			<textarea id="deckData" rows="5" cols="60" wrap="hard"></textarea>
 		</form>
