--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		
 		<div id="deckList">
 			<select name="decks">
-				<option value="3">(シティ秋葉原優勝)モルペコ人形</option>
+				<option value="3">メルカリザシアン</option>
 			</select>
 		</div>
 		
