--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
 		<p><font size=2>推奨端末: iPhone(6以降)</font></p>
 		<p><font size=2>Androidは画面広い機種だったらいけるはず</font></p>
 		<p><font size=2>6以前、SEは画面が小さいので正常に画面表示されないかも</font></p>
-		<p><b>・ご要望(8/3更新)</b></p>
-		<p><font size=3><b>ソルルナSR当てて気分がいいので新機能</b></font></p>
-		<p><font size=2>トラッシュに送るボックスの追加、いちいち引き出さなくてもいいよ</font></p>
+		<p><b>・ご要望(12/31更新)</b></p>
+		<p><font size=2>試行錯誤中</font></p>
 		<p><b>・いろいろ</b></p>
 		<p><font size=2>カードをまとめて移動できないのは仕様です、対策を検討中...</font></p>
 		<p><font size=2>1人で作ったのでデバッグ作業が間に合ってません、不具合があったら報告お願いします。</font></p>
@@ -134,7 +133,7 @@
 		
 		<div id="deckList">
 			<select name="decks">
-				<option value="3">メルカリザシアン</option>
+				<option value="3">PPP</option>
 			</select>
 		</div>
 		
