--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 		</div>
 		
 		<br>
-		<b>•ひみつのじゅもん</b>
+		<b>デッキコード</b>
 		<form>
-			<textarea id="deckData" rows="5" cols="60" wrap="hard"></textarea>
+			<textarea id="deckData" rows="1" cols="30" wrap="hard"></textarea>
 		</form>
 		<input type="submit" id="setDeckButton" value="デッキ設定">
 		<input type="submit" id="copyTextButton" value="デッキデータをコピー">
